--- a/.env
+++ b/.env
@@ -15,4 +15,6 @@ PATH_VALID_LABELS=./euro/valid/labels
 PATH_TEST_LABELS=./euro/test/labels
 
 #Path per modelli
-PATH_REGRESSION_MODEL_BEST=./checkpoints/best_regression/squeezenet_best.pth
+PATH_SQUEEZENET_BEST=./checkpoints/best_regression/squeezenet_best.pth
+PATH_SQUEEZENET_PRETRAINED_BEST=./checkpoints/best_regression/squeezenet_pretrained_best.pth
+PATH_RESNET_BEST=./checkpoints/best_regression/resnet_pretrained_best.pth
