Aggiunti i vari train per la regressione; aggiornato main.py, .env, script per dataset e aggiunto directory bin che conterrà le medie e dev. std. e l'immagine del qr-code

--- a/.env
+++ b/.env
@@ -18,3 +18,10 @@ PATH_TEST_LABELS=./euro/test/labels
 PATH_SQUEEZENET_BEST=./checkpoints/best_regression/squeezenet_best.pth
 PATH_SQUEEZENET_PRETRAINED_BEST=./checkpoints/best_regression/squeezenet_pretrained_best.pth
 PATH_RESNET_BEST=./checkpoints/best_regression/resnet_pretrained_best.pth
+PATH_YOLO_BEST=./checkpoints/yolo/best.pt
+
+#Path per qr code roboflow
+PATH_ROBOFLOW=./bin/roboflowQR.png
+
+#Path per scripts
+PATH_CSV_MAKER=./util/dataset_maker_regression.py
