Cambiato nome da bin a data, fix env di conseguenza, sorgente di test in realtà cambiano solo metadata

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 #Path per media e dev. std.
-PATH_MEAN_STD=./bin/valori.pkl
+PATH_MEAN_STD=./data/valori.pkl
 
 #Path per CSV e script CSV
 PATH_TRAIN_CSV=./euro/train/train.csv
@@ -21,7 +21,7 @@ PATH_RESNET_BEST=./checkpoints/best_regression/resnet_pretrained_best.pth
 PATH_YOLO_BEST=./checkpoints/yolo/best.pt
 
 #Path per qr code roboflow
-PATH_ROBOFLOW=./bin/roboflowQR.png
+PATH_ROBOFLOW=./data/roboflowQR.png
 
 #Path per scripts
 PATH_CSV_MAKER=./util/dataset_maker_regression.py
