Fix path per yolo, rename dei file, checkpoint messi al posto giusto e logs e grafici dentro logs, gitignore aggiornato, env aggiornato

--- a/.env
+++ b/.env
@@ -13,6 +13,7 @@ PATH_TEST_IMAGES=./euro/test/images
 PATH_TRAIN_LABELS=./euro/train/labels
 PATH_VALID_LABELS=./euro/valid/labels
 PATH_TEST_LABELS=./euro/test/labels
+PATH_YAML=./euro/data.yaml
 
 #Path per modelli
 PATH_SQUEEZENET_BEST=./checkpoints/best_regression/squeezenet_best.pth
