added yolo_euro_v2 vs yolo_euro_v6

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ PATH_YAML=./euro/data.yaml
 PATH_SQUEEZENET_BEST=./checkpoints/best_regression/squeezenet_best.pth
 PATH_SQUEEZENET_PRETRAINED_BEST=./checkpoints/best_regression/squeezenet_pretrained_best.pth
 PATH_RESNET_BEST=./checkpoints/best_regression/resnet_pretrained_best.pth
-PATH_YOLO_BEST=./checkpoints/yolo/best.pt
+PATH_YOLO_BEST=./checkpoints/yolo_euro_v6/best.pt
 
 #Path per qr code roboflow
 PATH_ROBOFLOW=./data/roboflowQR.png
